[gd_scene load_steps=17 format=2]

[ext_resource path="res://Items/orb_solar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Items/key_solar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Items/key_lunar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Items/plat_lunar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Items/plat_solar.tscn" type="PackedScene" id=5]
[ext_resource path="res://Items/box.tscn" type="PackedScene" id=6]
[ext_resource path="res://Items/player1.tscn" type="PackedScene" id=7]
[ext_resource path="res://Items/button.tscn" type="PackedScene" id=8]
[ext_resource path="res://Items/door.tscn" type="PackedScene" id=9]
[ext_resource path="res://Tilemap.tres" type="TileSet" id=10]
[ext_resource path="res://Items/lever.tscn" type="PackedScene" id=11]
[ext_resource path="res://Items/mplat.tscn" type="PackedScene" id=12]
[ext_resource path="res://Levels/Level3.gd" type="Script" id=13]
[ext_resource path="res://Items/orb_lunar.tscn" type="PackedScene" id=14]
[ext_resource path="res://Items/tunnel_solar.tscn" type="PackedScene" id=15]
[ext_resource path="res://Items/tunnel_lunar.tscn" type="PackedScene" id=16]

[node name="Level3" type="Node2D"]
script = ExtResource( 13 )

[node name="TileMap2" type="TileMap" parent="."]
tile_set = ExtResource( 10 )
format = 1
tile_data = PoolIntArray( -524268, 15, 0, -327672, 15, 0, 262143, 15, 0, 196608, 15, 0, 327701, 15, 0, 327704, 15, 0, 524294, 15, 0 )

[node name="Doors" type="Node2D" parent="."]

[node name="door" parent="Doors" instance=ExtResource( 9 )]
position = Vector2( 416, 640 )
type = 1

[node name="door2" parent="Doors" instance=ExtResource( 9 )]
position = Vector2( 1472, 352 )
rotation = -1.5708
type = 2

[node name="door3" parent="Doors" instance=ExtResource( 9 )]
position = Vector2( 0, 224 )
rotation = 1.5708
type = 3

[node name="door4" parent="Doors" instance=ExtResource( 9 )]
position = Vector2( 544, -192 )
type = 1

[node name="door5" parent="Doors" instance=ExtResource( 9 )]
position = Vector2( 1312, -384 )
type = 2

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 10 )
format = 1
tile_data = PoolIntArray( -1769472, 0, 0, -1769471, 0, 0, -1769470, 0, 0, -1769469, 0, 0, -1769468, 0, 0, -1769467, 0, 0, -1769466, 0, 0, -1769465, 0, 0, -1769464, 0, 0, -1769463, 0, 0, -1769462, 0, 0, -1769461, 0, 0, -1769460, 0, 0, -1769459, 0, 0, -1769458, 0, 0, -1769457, 0, 0, -1769456, 0, 0, -1769455, 0, 0, -1769454, 0, 0, -1769453, 0, 0, -1769452, 0, 0, -1769451, 0, 0, -1769450, 0, 0, -1769449, 0, 0, -1769448, 0, 0, -1703936, 15, 0, -1703935, 15, 0, -1703934, 15, 0, -1703933, 15, 0, -1703932, 15, 0, -1703931, 15, 0, -1703930, 15, 0, -1703929, 15, 0, -1703928, 15, 0, -1703927, 15, 0, -1703926, 15, 0, -1703925, 15, 0, -1703924, 15, 0, -1703923, 15, 0, -1703922, 15, 0, -1703921, 15, 0, -1703920, 15, 0, -1703919, 15, 0, -1703918, 15, 0, -1703917, 15, 0, -1703916, 15, 0, -1703915, 15, 0, -1703914, 15, 0, -1703913, 15, 0, -1703912, 15, 0, -1638400, 15, 0, -1638399, 15, 0, -1638398, 15, 0, -1638397, 15, 0, -1638396, 15, 0, -1638395, 15, 0, -1638394, 15, 0, -1638393, 15, 0, -1638392, 15, 0, -1638391, 15, 0, -1638390, 15, 0, -1638389, 15, 0, -1638388, 15, 0, -1638387, 15, 0, -1638386, 15, 0, -1638385, 15, 0, -1638384, 15, 0, -1638383, 15, 0, -1638382, 15, 0, -1638381, 15, 0, -1638380, 15, 0, -1638379, 15, 0, -1638378, 15, 0, -1638377, 15, 0, -1638376, 15, 0, -1572864, 15, 0, -1572863, 15, 0, -1572862, 15, 0, -1572861, 15, 0, -1572860, 15, 0, -1572859, 15, 0, -1572858, 15, 0, -1572857, 15, 0, -1572856, 15, 0, -1572855, 15, 0, -1572854, 15, 0, -1572853, 15, 0, -1572852, 15, 0, -1572851, 15, 0, -1572850, 15, 0, -1572849, 15, 0, -1572848, 15, 0, -1572847, 15, 0, -1572846, 15, 0, -1572845, 15, 0, -1572844, 15, 0, -1572843, 15, 0, -1572842, 15, 0, -1572841, 15, 0, -1572840, 15, 0, -1507328, 15, 0, -1507327, 15, 0, -1507326, 15, 0, -1507325, 15, 0, -1507324, 15, 0, -1507323, 15, 0, -1507322, 15, 0, -1507321, 15, 0, -1507320, 15, 0, -1507319, 15, 0, -1507318, 15, 0, -1507317, 15, 0, -1507316, 15, 0, -1507315, 15, 0, -1507314, 15, 0, -1507313, 15, 0, -1507312, 15, 0, -1507311, 15, 0, -1507310, 15, 0, -1507309, 15, 0, -1507308, 15, 0, -1507307, 15, 0, -1507306, 15, 0, -1507305, 15, 0, -1507304, 15, 0, -1441792, 13, 0, -1441791, 14, 0, -1441790, 14, 0, -1441789, 14, 0, -1441788, 14, 0, -1441787, 14, 0, -1441786, 14, 0, -1441785, 14, 0, -1441784, 14, 0, -1441783, 14, 0, -1441782, 14, 0, -1441781, 14, 0, -1441780, 14, 0, -1441779, 14, 0, -1441778, 14, 0, -1441777, 14, 0, -1441776, 14, 0, -1441775, 14, 0, -1441774, 14, 0, -1441773, 14, 0, -1441772, 14, 0, -1441771, 14, 0, -1441770, 14, 0, -1441769, 14, 0, -1441768, 12, 0, -1376256, 17, 0, -1376232, 16, 0, -1310720, 17, 0, -1310696, 16, 0, -1245184, 17, 0, -1245160, 16, 0, -1179648, 17, 0, -1179624, 16, 0, -1114112, 17, 0, -1114088, 16, 0, -1048576, 17, 0, -1048565, 1, 0, -1048564, 2, 0, -1048563, 3, 0, -1048552, 16, 0, -983040, 17, 0, -983032, 9, 0, -983024, 9, 0, -983016, 16, 0, -917504, 17, 0, -917480, 16, 0, -851968, 13, 0, -851967, 2, 0, -851966, 2, 0, -851965, 2, 0, -851964, 0, 0, -851963, 3, 0, -851962, 8, 0, -851961, 8, 0, -851960, 8, 0, -851959, 1, 0, -851958, 2, 0, -851957, 12, 0, -851956, 15, 0, -851955, 13, 0, -851954, 2, 0, -851953, 3, 0, -851952, 8, 0, -851951, 8, 0, -851950, 8, 0, -851949, 1, 0, -851948, 2, 0, -851947, 2, 0, -851946, 2, 0, -851945, 2, 0, -851944, 12, 0, -786432, 17, 0, -786428, 15, 0, -786421, 16, 0, -786420, 15, 0, -786419, 17, 0, -786408, 16, 0, -720896, 17, 0, -720892, 15, 0, -720885, 16, 0, -720884, 15, 0, -720883, 17, 0, -720872, 16, 0, -655360, 17, 0, -655356, 15, 0, -655349, 16, 0, -655348, 15, 0, -655347, 17, 0, -655336, 16, 0, -589824, 15, 0, -589823, 0, 0, -589821, 0, 0, -589820, 15, 0, -589813, 16, 0, -589812, 15, 0, -589811, 17, 0, -589804, 0, 0, -589803, 2, 0, -589802, 3, 0, -589800, 16, 0, -524288, 13, 0, -524287, 14, 0, -524286, 14, 0, -524285, 14, 0, -524284, 14, 0, -524277, 16, 0, -524276, 15, 0, -524275, 17, 0, -524268, 14, 0, -524264, 16, 0, -458752, 17, 0, -458741, 16, 0, -458740, 15, 0, -458739, 17, 0, -458729, 1, 0, -458728, 12, 0, -393216, 17, 0, -393213, 1, 0, -393212, 2, 0, -393211, 2, 0, -393210, 2, 0, -393209, 2, 0, -393208, 0, 0, -393205, 16, 0, -393204, 15, 0, -393203, 13, 0, -393202, 2, 0, -393201, 3, 0, -393192, 16, 0, -327680, 17, 0, -327672, 14, 0, -327669, 16, 0, -327668, 15, 0, -327667, 17, 0, -327660, 0, 0, -327659, 2, 0, -327658, 2, 0, -327657, 2, 0, -327656, 15, 0, -262144, 15, 0, -262143, 0, 0, -262142, 0, 0, -262141, 0, 0, -262133, 16, 0, -262132, 15, 0, -262131, 17, 0, -262126, 1, 0, -262125, 2, 0, -262124, 15, 0, -262120, 15, 0, -196608, 15, 0, -196607, 15, 0, -196606, 15, 0, -196605, 15, 0, -196597, 16, 0, -196596, 15, 0, -196595, 17, 0, -196588, 15, 0, -196584, 15, 0, -131072, 13, 0, -131071, 14, 0, -131070, 14, 0, -131069, 14, 0, -131068, 2, 0, -131067, 2, 0, -131066, 2, 0, -131065, 2, 0, -131064, 3, 0, -131061, 16, 0, -131060, 15, 0, -131059, 13, 0, -131058, 2, 0, -131057, 2, 0, -131056, 3, 0, -131052, 15, 0, -131048, 15, 0, -65536, 17, 0, -65525, 16, 0, -65524, 15, 0, -65523, 17, 0, -65516, 15, 0, -65515, 0, 0, -65513, 0, 0, -65512, 15, 0, 0, 17, 0, 11, 16, 0, 12, 15, 0, 13, 17, 0, 20, 14, 0, 21, 14, 0, 22, 2, 0, 23, 14, 0, 24, 12, 0, 65536, 13, 0, 65537, 2, 0, 65538, 2, 0, 65539, 3, 0, 65545, 1, 0, 65546, 2, 0, 65547, 14, 0, 65548, 14, 0, 65549, 17, 0, 65560, 16, 0, 131072, 17, 0, 131085, 17, 0, 131089, 1, 0, 131090, 2, 0, 131091, 3, 0, 131096, 16, 0, 196608, 17, 0, 196619, 9, 0, 196621, 17, 0, 196632, 16, 0, 262144, 17, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 17, 0, 262168, 16, 0, 327680, 13, 0, 327681, 2, 0, 327682, 2, 0, 327683, 14, 0, 327684, 14, 0, 327685, 14, 0, 327686, 15, 0, 327687, 14, 0, 327688, 14, 0, 327691, 16, 0, 327692, 15, 0, 327693, 13, 0, 327694, 2, 0, 327695, 2, 0, 327696, 2, 0, 327697, 2, 0, 327698, 2, 0, 327699, 0, 0, 327700, 0, 0, 327701, 3, 0, 327704, 16, 0, 393216, 17, 0, 393222, 15, 0, 393227, 16, 0, 393228, 15, 0, 393229, 17, 0, 393235, 13, 0, 393240, 16, 0, 458752, 13, 0, 458753, 2, 0, 458754, 3, 0, 458758, 15, 0, 458763, 16, 0, 458764, 15, 0, 458765, 17, 0, 458771, 13, 0, 458776, 16, 0, 524288, 17, 0, 524294, 14, 0, 524295, 2, 0, 524296, 3, 0, 524299, 16, 0, 524300, 15, 0, 524301, 17, 0, 524307, 15, 0, 524308, 0, 0, 524309, 0, 0, 524312, 16, 0, 589824, 17, 0, 589835, 16, 0, 589836, 15, 0, 589837, 17, 0, 589843, 15, 0, 589844, 15, 0, 589845, 13, 0, 589848, 16, 0, 655360, 17, 0, 655362, 9, 0, 655371, 16, 0, 655372, 15, 0, 655373, 17, 0, 655379, 15, 0, 655380, 15, 0, 655381, 13, 0, 655384, 16, 0, 720896, 15, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 15, 0, 720908, 15, 0, 720909, 15, 0, 720910, 0, 0, 720911, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 0, 0, 720918, 0, 0, 720919, 0, 0, 720920, 15, 0, 786432, 15, 0, 786433, 15, 0, 786434, 15, 0, 786435, 15, 0, 786436, 15, 0, 786437, 15, 0, 786438, 15, 0, 786439, 15, 0, 786440, 15, 0, 786441, 15, 0, 786442, 15, 0, 786443, 15, 0, 786444, 15, 0, 786445, 15, 0, 786446, 15, 0, 786447, 15, 0, 786448, 15, 0, 786449, 15, 0, 786450, 15, 0, 786451, 15, 0, 786452, 15, 0, 786453, 15, 0, 786454, 15, 0, 786455, 15, 0, 786456, 15, 0, 851968, 15, 0, 851969, 15, 0, 851970, 15, 0, 851971, 15, 0, 851972, 15, 0, 851973, 15, 0, 851974, 15, 0, 851975, 15, 0, 851976, 15, 0, 851977, 15, 0, 851978, 15, 0, 851979, 15, 0, 851980, 15, 0, 851981, 15, 0, 851982, 15, 0, 851983, 15, 0, 851984, 15, 0, 851985, 15, 0, 851986, 15, 0, 851987, 15, 0, 851988, 15, 0, 851989, 15, 0, 851990, 15, 0, 851991, 15, 0, 851992, 15, 0, 917504, 15, 0, 917505, 15, 0, 917506, 15, 0, 917507, 15, 0, 917508, 15, 0, 917509, 15, 0, 917510, 15, 0, 917511, 15, 0, 917512, 15, 0, 917513, 15, 0, 917514, 15, 0, 917515, 15, 0, 917516, 15, 0, 917517, 15, 0, 917518, 15, 0, 917519, 15, 0, 917520, 15, 0, 917521, 15, 0, 917522, 15, 0, 917523, 15, 0, 917524, 15, 0, 917525, 15, 0, 917526, 15, 0, 917527, 15, 0, 917528, 15, 0, 983040, 15, 0, 983041, 15, 0, 983042, 15, 0, 983043, 15, 0, 983044, 15, 0, 983045, 15, 0, 983046, 15, 0, 983047, 15, 0, 983048, 15, 0, 983049, 15, 0, 983050, 15, 0, 983051, 15, 0, 983052, 15, 0, 983053, 15, 0, 983054, 15, 0, 983055, 15, 0, 983056, 15, 0, 983057, 15, 0, 983058, 15, 0, 983059, 15, 0, 983060, 15, 0, 983061, 15, 0, 983062, 15, 0, 983063, 15, 0, 983064, 15, 0, 1048576, 14, 0, 1048577, 14, 0, 1048578, 14, 0, 1048579, 14, 0, 1048580, 14, 0, 1048581, 14, 0, 1048582, 14, 0, 1048583, 14, 0, 1048584, 14, 0, 1048585, 14, 0, 1048586, 14, 0, 1048587, 14, 0, 1048588, 14, 0, 1048589, 14, 0, 1048590, 14, 0, 1048591, 14, 0, 1048592, 14, 0, 1048593, 14, 0, 1048594, 14, 0, 1048595, 14, 0, 1048596, 14, 0, 1048597, 14, 0, 1048598, 14, 0, 1048599, 14, 0, 1048600, 14, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="tunnel_lunar" parent="." instance=ExtResource( 16 )]
position = Vector2( 888, -896 )

[node name="tunnel_solar" parent="." instance=ExtResource( 15 )]
position = Vector2( 704, -896 )

[node name="Players" type="Node2D" parent="."]

[node name="player1" parent="Players" instance=ExtResource( 7 )]
position = Vector2( 160, 600 )
id = 1
velocity = Vector2( 0, -384 )

[node name="Camera2D" type="Camera2D" parent="Players/player1"]
current = true
limit_left = 0
limit_top = -1344
limit_right = 1600
limit_bottom = 832
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_top = 0.5
drag_margin_bottom = 0.5
editor_draw_limits = true

[node name="player2" parent="Players" instance=ExtResource( 7 )]
position = Vector2( 1472, 672 )
id = 2

[node name="Boxes" type="Node2D" parent="."]

[node name="box" parent="Boxes" instance=ExtResource( 6 )]
position = Vector2( 1056, 480 )

[node name="box2" parent="Boxes" instance=ExtResource( 6 )]
position = Vector2( 320, 480 )

[node name="box3" parent="Boxes" instance=ExtResource( 6 )]
position = Vector2( 1440, -160 )

[node name="box4" parent="Boxes" instance=ExtResource( 6 )]
position = Vector2( 640, -288 )

[node name="box5" parent="Boxes" instance=ExtResource( 6 )]
position = Vector2( 160, -672 )

[node name="ButtonsMPlats" type="Node2D" parent="."]

[node name="button" parent="ButtonsMPlats" instance=ExtResource( 8 )]
position = Vector2( 96, 672 )

[node name="mplat" parent="ButtonsMPlats" instance=ExtResource( 12 )]
position = Vector2( 1472, 736 )
move_to = Vector2( 0, -256 )
type = 1

[node name="button2" parent="ButtonsMPlats" instance=ExtResource( 8 )]
position = Vector2( 928, 288 )

[node name="mplat2" parent="ButtonsMPlats" instance=ExtResource( 12 )]
position = Vector2( 640, 736 )
move_to = Vector2( 0, -448 )
type = 1

[node name="button3" parent="ButtonsMPlats" instance=ExtResource( 8 )]
position = Vector2( 128, 288 )

[node name="mplat3" parent="ButtonsMPlats" instance=ExtResource( 12 )]
position = Vector2( 1024, 288 )
move_to = Vector2( 0, -64 )
type = 1

[node name="button4" parent="ButtonsMPlats" instance=ExtResource( 8 )]
position = Vector2( 1376, -608 )

[node name="mplat4" parent="ButtonsMPlats" instance=ExtResource( 12 )]
position = Vector2( 480, -480 )
move_to = Vector2( 0, -320 )

[node name="button5" parent="ButtonsMPlats" instance=ExtResource( 8 )]
position = Vector2( 160, -864 )

[node name="button6" parent="ButtonsMPlats" instance=ExtResource( 8 )]
position = Vector2( 1056, 736 )

[node name="button7" parent="ButtonsMPlats" instance=ExtResource( 8 )]
position = Vector2( 1440, -32 )

[node name="button8" parent="ButtonsMPlats" instance=ExtResource( 8 )]
position = Vector2( 160, -544 )

[node name="mplat5" parent="ButtonsMPlats" instance=ExtResource( 12 )]
position = Vector2( 1120, -480 )
move_to = Vector2( 0, -320 )

[node name="LeversPlats" type="Node2D" parent="."]

[node name="lever" parent="LeversPlats" instance=ExtResource( 11 )]
position = Vector2( 1344, 288 )
lever_id = 1
on = true

[node name="plat_solar" parent="LeversPlats" instance=ExtResource( 5 )]
position = Vector2( 320, 544 )

[node name="lever2" parent="LeversPlats" instance=ExtResource( 11 )]
position = Vector2( 528, 480 )
lever_id = 2
on = true

[node name="plat_lunar" parent="LeversPlats" instance=ExtResource( 4 )]
position = Vector2( 1056, 544 )

[node name="lever3" parent="LeversPlats" instance=ExtResource( 11 )]
position = Vector2( 1184, 96 )
lever_id = 1

[node name="plat_solar2" parent="LeversPlats" instance=ExtResource( 5 )]
position = Vector2( 416, 160 )
exists = false

[node name="lever4" parent="LeversPlats" instance=ExtResource( 11 )]
position = Vector2( 640, 32 )
lever_id = 2
on = true

[node name="plat_lunar2" parent="LeversPlats" instance=ExtResource( 4 )]
position = Vector2( 1440, -96 )

[node name="lever5" parent="LeversPlats" instance=ExtResource( 11 )]
position = Vector2( 160, 32 )
lever_id = 2

[node name="plat_lunar3" parent="LeversPlats" instance=ExtResource( 4 )]
position = Vector2( 1184, 32 )
exists = false

[node name="lever6" parent="LeversPlats" instance=ExtResource( 11 )]
position = Vector2( 992, -160 )
lever_id = 1
on = true

[node name="plat_solar3" parent="LeversPlats" instance=ExtResource( 5 )]
position = Vector2( 640, -224 )

[node name="lever7" parent="LeversPlats" instance=ExtResource( 11 )]
position = Vector2( 800, -1056 )
lever_id = 1
on = true

[node name="plat_solar4" parent="LeversPlats" instance=ExtResource( 5 )]
position = Vector2( 160, -608 )

[node name="Collectibles" type="Node2D" parent="."]

[node name="key_solar" parent="Collectibles" instance=ExtResource( 2 )]
position = Vector2( 1344, 448 )

[node name="key_lunar" parent="Collectibles" instance=ExtResource( 3 )]
position = Vector2( 128, 416 )
rotation = 1.5708

[node name="key_solar2" parent="Collectibles" instance=ExtResource( 2 )]
position = Vector2( 1184, -128 )

[node name="key_lunar2" parent="Collectibles" instance=ExtResource( 3 )]
position = Vector2( 128, -352 )

[node name="orb_solar" parent="Collectibles" instance=ExtResource( 1 )]
position = Vector2( 384, -216 )

[node name="orb_lunar" parent="Collectibles" instance=ExtResource( 14 )]
position = Vector2( 1408, -416 )

[node name="Timer" type="Timer" parent="."]
[connection signal="body_entered" from="tunnel_lunar" to="." method="_on_tunnel_lunar_body_entered"]
[connection signal="body_exited" from="tunnel_lunar" to="." method="_on_tunnel_lunar_body_exited"]
[connection signal="body_entered" from="tunnel_solar" to="." method="_on_tunnel_solar_body_entered"]
[connection signal="body_exited" from="tunnel_solar" to="." method="_on_tunnel_solar_body_exited"]
[connection signal="button_press" from="ButtonsMPlats/button" to="." method="_on_button_button_press"]
[connection signal="button_unpress" from="ButtonsMPlats/button" to="." method="_on_button_button_unpress"]
[connection signal="button_press" from="ButtonsMPlats/button2" to="." method="_on_button2_button_press"]
[connection signal="button_unpress" from="ButtonsMPlats/button2" to="." method="_on_button2_button_unpress"]
[connection signal="button_press" from="ButtonsMPlats/button3" to="." method="_on_button3_button_press"]
[connection signal="button_press" from="ButtonsMPlats/button3" to="Doors/door3" method="_on_button_button_press"]
[connection signal="button_unpress" from="ButtonsMPlats/button3" to="." method="_on_button3_button_unpress"]
[connection signal="button_press" from="ButtonsMPlats/button4" to="." method="_on_button4_button_press"]
[connection signal="button_unpress" from="ButtonsMPlats/button4" to="." method="_on_button4_button_unpress"]
[connection signal="button_press" from="ButtonsMPlats/button5" to="." method="_on_button5_button_press"]
[connection signal="button_unpress" from="ButtonsMPlats/button5" to="." method="_on_button5_button_unpress"]
[connection signal="button_press" from="ButtonsMPlats/button6" to="." method="_on_button5_button_press"]
[connection signal="button_unpress" from="ButtonsMPlats/button6" to="." method="_on_button5_button_unpress"]
[connection signal="button_press" from="ButtonsMPlats/button7" to="." method="_on_button5_button_press"]
[connection signal="button_unpress" from="ButtonsMPlats/button7" to="." method="_on_button5_button_unpress"]
[connection signal="button_press" from="ButtonsMPlats/button8" to="." method="_on_button5_button_press"]
[connection signal="button_unpress" from="ButtonsMPlats/button8" to="." method="_on_button5_button_unpress"]
[connection signal="off" from="LeversPlats/lever" to="LeversPlats/plat_solar" method="_on_lever_off"]
[connection signal="on" from="LeversPlats/lever" to="LeversPlats/plat_solar" method="_on_lever_on"]
[connection signal="off" from="LeversPlats/lever2" to="LeversPlats/plat_lunar" method="_on_lever_off"]
[connection signal="on" from="LeversPlats/lever2" to="LeversPlats/plat_lunar" method="_on_lever_on"]
[connection signal="off" from="LeversPlats/lever3" to="LeversPlats/plat_solar2" method="_on_lever_off"]
[connection signal="on" from="LeversPlats/lever3" to="LeversPlats/plat_solar2" method="_on_lever_on"]
[connection signal="off" from="LeversPlats/lever4" to="LeversPlats/plat_lunar2" method="_on_lever_off"]
[connection signal="on" from="LeversPlats/lever4" to="LeversPlats/plat_lunar2" method="_on_lever_on"]
[connection signal="off" from="LeversPlats/lever5" to="LeversPlats/plat_lunar3" method="_on_lever_off"]
[connection signal="on" from="LeversPlats/lever5" to="LeversPlats/plat_lunar3" method="_on_lever_on"]
[connection signal="off" from="LeversPlats/lever6" to="LeversPlats/plat_solar3" method="_on_lever_off"]
[connection signal="on" from="LeversPlats/lever6" to="LeversPlats/plat_solar3" method="_on_lever_on"]
[connection signal="off" from="LeversPlats/lever7" to="LeversPlats/plat_solar4" method="_on_lever_off"]
[connection signal="on" from="LeversPlats/lever7" to="LeversPlats/plat_solar4" method="_on_lever_on"]
[connection signal="collected" from="Collectibles/key_solar" to="Doors/door" method="_on_key_solar_collected"]
[connection signal="collected" from="Collectibles/key_lunar" to="Doors/door2" method="_on_key_lunar_collected"]
[connection signal="collected" from="Collectibles/key_solar2" to="Doors/door4" method="_on_key_solar_collected"]
[connection signal="collected" from="Collectibles/key_lunar2" to="Doors/door5" method="_on_key_lunar_collected"]
[connection signal="collected" from="Collectibles/orb_solar" to="." method="_on_orb_solar_collected"]
[connection signal="collected" from="Collectibles/orb_lunar" to="." method="_on_orb_lunar_collected"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
